# AndroidCppWithAsm

./: .gitignore  README.md
AndroidAsm/: settings.gradle.kts
AndroidAsm/app/: build.gradle.kts
AndroidAsm/app/src/main/cpp/: CMakeLists.txt
AndroidAsm/app/src/main/java/com/grf/androidasm/: MainActivity.java
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  factorial.s  get_hello_str.s  get_number.s  native-lib.cpp  native_lib.cpp
app/src/main/java/com/noemie/androidasm/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
